--- a/codemate.html
+++ b/codemate.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="codemate.html">HOME</a>
+              <a class="nav-link" href="#">HOME</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">ABOUT US</a>
@@ -41,7 +41,7 @@
                 COURSES
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">ALL COURSES</a></li>
+                <li><a class="dropdown-item" href="/YOURCODEMATE/courses.html">ALL COURSES</a></li>
               
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">PYTHON</a></li>
