--- a/courses.html
+++ b/courses.html
@@ -35,7 +35,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="codemate.html">HOME</a>
+                <a class="nav-link" href="/YOURCODEMATE/codemate.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">ABOUT US</a>
