--- a/codemate.html
+++ b/codemate.html
@@ -48,7 +48,7 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                CHEATSHEET
+                CHEATSHEETS
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="https://www.codecademy.com/learn/learn-html/modules/learn-semantic-html/cheatsheet">HTML</a></li>
