--- a/courses.html
+++ b/courses.html
@@ -232,7 +232,7 @@ h4:hover:after {
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="codemate.html">HOME</a>
+                <a class="nav-link" href="/YOURCODEMATE/codemate.html">HOME</a>
               </li>
   
               <li class="nav-item dropdown">
@@ -243,8 +243,8 @@ h4:hover:after {
                   <li><a class="dropdown-item" href="#">ALL COURSES</a></li>
                 
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">PYTHON</a></li>
-                  <li><a class="dropdown-item" href="#">JAVA</a></li>
+                  <li><a class="dropdown-item" href="/YOURCODEMATE/python.html">PYTHON</a></li>
+                  <li><a class="dropdown-item" href="/YOURCODEMATE/Java.html">JAVA</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -252,8 +252,8 @@ h4:hover:after {
                   CHEATSHEET
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">HTML</a></li>
-                  <li><a class="dropdown-item" href="#">PYTHON</a></li>
+                  <li><a class="dropdown-item" href="https://www.codecademy.com/learn/learn-html/modules/learn-semantic-html/cheatsheet">HTML</a></li>
+                  <li><a class="dropdown-item" href="https://www.codewithharry.com/blogpost/python-cheatsheet">PYTHON</a></li>
                   
                 </ul>
               </li>
